--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-15-jul",
-  "homepage": "https://FaridBerlin.github.io/faridp666/",
+  "homepage": "https://faridberlin.github.io/weather-15-jul/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
